--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@monaco-editor/react": "^4.5.2",
     "monaco-editor": "^0.44.0",
-    "@monaco-editor/react": "^4.5.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.10"
   }
 }
